<resources>
    <string name="app_name">Covid-19 Info-Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome to Covid-19 India Dashboard</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="india">India</string>
    <string name="total_cases">Total Cases:</string>
    <string name="active">Active:</string>
    <string name="recovered">Recovered:</string>
    <string name="deceased">Deceased:</string>
    <string name="get_vaccinated">Are you 18+? Get Vaccinated</string>
    <string name="seek_help">Seek Help</string>
    <string name="statewise_statistics_fetched_at_xxpm">Statewise Statistics: </string>
    <string name="search_hint_dashboard">Search State or UT</string>
    <string name="indian">Indian:</string>
    <string name="foreign">Foreign:</string>
    <string name="helpline">Helpline</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="select_date">Select a Date to get State-Wise Data:</string>
    <string name="date">Date</string>
    <string name="get_statewise_data">Get Statewise Data</string>
    <string name="statewise_history">Statewise History</string>
    <string name="covid_19_india_info">Covid-19 India Info</string>
    <string name="search_for_a_date_dd_mm_yyyy">Search for a Date (DD/MM/YYYY)</string>
    <string name="helpline1"><u>01123978046</u></string>
    <string name="helpline2"><u>1075</u></string>
    <string name="website"><u>https://www.mohfw.gov.in</u></string>
    <string name="nearest_response_centers">Region-wise Helpline Numbers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="india_covid_19_helpline_numbers">India Covid-19 HelpLine Numbers:</string>
    <string name="ministry_of_health_website">Ministry of Health Website:</string>
    <string name="title">COVID-19 India Information, Dashboard, Vaccination, Leads</string>
    <string name="covid_19">Covid-19</string>
    <string name="vaccination">Vaccination</string>
    <string name="register_for_vaccination_on_cowin">Register for Vaccination</string>
    <string name="vaccination_certificate">Vaccination Certificate</string>
    <string name="leads">Beds, Oxygen ,Leads and Posts</string>
    <string name="hospital_locations">Hospital Locations</string>
    <string name="covid_india_resources">Covid India Resources</string>
    <string name="beds_oxygen_medcines_dashboard_by_sprinklr">Sprinklr Dashboard</string>
    <string name="general">General</string>
    <string name="hospital_map">map</string>
    <string name="coid19_india_resources">res</string>
    <string name="if_the_page_didn_t_open_open_this_link_in_a_desktop_browser">If the page didn\'t open or show correctly, open this link in a desktop browser:</string>
    <string name="hospital_map_url"><u>https://covid-19-hospital-data.el.r.appspot.com</u></string>
    <string name="vaccination_statistics">Vaccination Statistics</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="covid_19_info">Covid-19 Info</string>
    <string name="donate">Donate</string>
    <string name="info_1">This app has been made to provide easier access to Covid-19 data in India including national case counts followed by case counts in various states and UTs providing counts of active, recovered and deceased cases along with the total confirmed cases so far. It also allows users to view the day wise history of the disease dating back to March 2020.</string>
    <string name="info_2">Since there has been a recent surge in the number of cases, it is extremely difficult to keep track of every case in every state. Hence the data provided is updated daily with the best efforts of volunteers and the people behind creating the api used in the app: https://api.rootnet.in/covid19-in/</string>
    <string name="info_3">Since the data is fetched from an open source api, it must not be considered 100% accurate and I hold no responsibility and accountability for any inaccuracy observed in the data.</string>
    <string name="info_4">All the Covid-19 leads and resources are provided by their respective posters and owners. This app only provides easier access to all those resources by directly opening their websites for ease of use. I hold no accountability for the authenticity of the leads or resources provided on these websites. It is a sole property of the website creators and the people posting it.</string>
    <string name="info_5">These are difficult times and the only way to defeat the pandemic is staying safe and helping each other. It is requested that everyone follow the guidelines for Covid-Appropirate behaviour including staying at home, wearing mask at all times when outside, maintaining social distancing and washing/sanitising your hands regularly.\nTogether we can beat this pandemic and come back stronger.</string>
    <string name="info_6">I wanted to contribute towards this vision as a developer and hence I decided to create this app to provide easier access to data, statistics and quick links for vaccine registration and leads for oxygen, beds and medicine resources that are circulating on the social media and tend to get mixed up with the other content and get difficult to find. I would like to thank Spinklr and Covid India Resources for creating such a wonderful dashboard, MH Covid Help desk for compiling such a big data sheet and Covid India Fighters for a wonderful website for sources and leads.</string>
    <string name="info_leads"> The users can log in and post any sources or leads they have regarding hospital beds, oxygen, medicines, equipments, plasma, ambulance, food and other resources in the leads section of the app. The tags can be used to filter specific leads and hence save time. The leads feature is still in beta mode and would be continuously enhanced following the feedback received. It is a 100% community backed feature and it is your responsibility to make sure that the leads posted on the app are verified before posting them.</string>
    <string name="location">Location:</string>
    <string name="number">Number</string>
    <string name="delhi_ncr_leads">Delhi/NCR Specific Leads, Resources</string>
    <string name="mh_covid_help_Desk">MH Covid Help Desk</string>
    <string name="covid_health_bot">Delhi Covid Health Bot</string>
    <string name="no_network">No Network Available. Please check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="user">User</string>
    <string name="phone">phone</string>
    <string name="post_title">Title</string>
    <string name="body">body</string>
    <string name="contact">Contact:</string>
    <string name="contact1">Contact 1</string>
    <string name="contact2">Contact 2</string>
    <string name="link">Links:</string>
    <string name="link1">Link1</string>
    <string name="link2">Link2</string>
    <string name="count">count</string>
    <string name="downvote">Downvote</string>
    <string name="upvote">Upvote</string>
    <string name="helpful">Was it Helpful?</string>
    <string name="warning">Please make sure that you are sharing verified leads and resources such that the people in need can get access to them quickly. Your post will be shown as it is and it is your responsibility to make sure that whatever you post is verified.</string>
    <string name="enter_title">Enter Title of Your Post</string>
    <string name="enter_contents">Type your Post Here</string>
    <string name="add_contact_number">Add Contact Numbers:</string>
    <string name="add_links">Add Links (optional):</string>
    <string name="add_image">Add Image</string>
    <string name="beds">Beds</string>
    <string name="oxigen">Oxygen</string>
    <string name="ventilators">Ventilators</string>
    <string name="medicines">Medicines</string>
    <string name="food">Food</string>
    <string name="others">Others</string>
    <string name="equipment">Equipment</string>
    <string name="title_">Title (required):</string>
    <string name="post">Post</string>
    <string name="no_posts">No posts added yet. Start adding posts and sharing your leads with others to help as many people as you can.</string>
    <string name="add_a_post">Add a Post</string>
    <string name="fetching_posts">Fetching Posts..</string>
    <string name="leads_">Leads</string>
    <string name="select_tags_for_filtering">Select Tags for Filtering</string>
    <string name="all">All</string>
    <string name="all_posts">All Leads</string>
    <string name="my_posts">My Leads</string>
    <string name="enter_location">Enter Location(Place/State)</string>
    <string name="location_">Enter the location where this lead is valid:</string>
    <string name="plasma">Plasma</string>
    <string name="ambulance">Ambulance</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="btn_google_login">Sign in with Google</string>
    <string name="Login">Login/Sign Up</string>
    <string name="password">Password</string>
    <string name="enter_email_or_ph_num">Enter Email Id</string>
    <string name="email_or_ph_num">Email:</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="signed_out">Signed Out Successfully</string>
    <string name="social_auth_failed">Authentication failed.</string>
    <string name="sign_in_failed">Sign In Failed, please try some other method.</string>
    <string name="signed_in_success">Signed in Successfully</string>
    <string name="please_wait">Please Wait</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_name">Enter your Full Name</string>
    <string name="name">Name</string>
    <string name="last_refreshed">Last Refreshed</string>
    <string name="covid_india_fighters">Covid India Fighters</string>
    <string name="signup_prompt"><u>No Account? SignUp</u></string>
    <string name="add_a_lead">Add a Lead</string>
    <string name="about_dev">Follow this link to provide any feedback or report any bugs</string>
    <string name="oxygen">Oxygen</string>
    <string name="meds">Medicines</string>
    <string name="other">Others</string>
</resources>