<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/post_title"
                android:textColor="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:text="@string/user" />

            <TextView
                android:id="@+id/userPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:visibility="gone"
                android:layout_marginEnd="10dp"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:text="@string/date" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:padding="5dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:padding="5dp"
                android:text="@string/body"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:background="@color/purple_700" />

            <LinearLayout
                android:id="@+id/contactLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/contact1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/contact1"
                    android:textColor="@color/blue" />

                <TextView
                    android:id="@+id/contact2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:text="@string/contact2"
                    android:textColor="@color/blue" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linkLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/link1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/link1"
                        android:textColor="@color/blue" />

                    <TextView
                        android:id="@+id/link2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/link2"
                        android:textColor="@color/blue" />
                </LinearLayout>

            </LinearLayout>


            <RelativeLayout
                android:id="@+id/rateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/upvoteLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/upvote"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/purple_700"
                        app:strokeWidth="3dp">

                        <TextView
                            android:id="@+id/upvoteTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/upvote"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/upvoteCnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/downvoteLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@id/upvoteLayout"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/downvote"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/purple_700"
                        app:strokeWidth="3dp">

                        <TextView
                            android:id="@+id/downvoteTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/downvote"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/downvoteCnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/helpfulLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/helpful"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:layout_margin="5dp"
                        app:cardCornerRadius="10dp"
                        app:strokeColor="@color/purple_700"
                        app:strokeWidth="3dp">

                        <TextView
                            android:id="@+id/helpfulTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:text="@string/helpful"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                    </com.google.android.material.card.MaterialCardView>

                    <TextView
                        android:id="@+id/helpfulCnt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/count" />

                </LinearLayout>
            </RelativeLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>