<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:padding="5dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:strokeWidth="3dp"
    app:strokeColor="@color/purple_700"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_cases"
                android:textColor="@color/purple_700"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/recovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/recovered"
                android:textColor="@color/green"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/deceased"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/deceased"
                android:textColor="@color/red"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
</com.google.android.material.card.MaterialCardView>